sdk/cdn/arm-cdn/samples/v7/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| --------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [DoNotNormalizeAfdCustomDomainsCreateSample.ts][donotnormalizeafdcustomdomainscreatesample]                                 | Creates a new domain within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [DoNotNormalizeAfdCustomDomainsDeleteSample.ts][donotnormalizeafdcustomdomainsdeletesample]                                 | Deletes an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_Delete.json                                                                                                                                                                                                                                                       |
| [DoNotNormalizeAfdCustomDomainsGetSample.ts][donotnormalizeafdcustomdomainsgetsample]                                       | Gets an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_Get.json                                                                                                                                                                                                                                                             |
| [DoNotNormalizeAfdCustomDomainsListByProfileSample.ts][donotnormalizeafdcustomdomainslistbyprofilesample]                   | Lists existing AzureFrontDoor domains. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                |
| [DoNotNormalizeAfdCustomDomainsRefreshValidationTokenSample.ts][donotnormalizeafdcustomdomainsrefreshvalidationtokensample] | Updates the domain validation token. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_RefreshValidationToken.json                                                                                                                                                                                                                                                                                                                                         |
| [DoNotNormalizeAfdCustomDomainsUpdateSample.ts][donotnormalizeafdcustomdomainsupdatesample]                                 | Updates an existing domain within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDCustomDomains_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [DoNotNormalizeAfdEndpointsCreateSample.ts][donotnormalizeafdendpointscreatesample]                                         | Creates a new AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_Create.json                                                                                                                                                                                                                                                             |
| [DoNotNormalizeAfdEndpointsDeleteSample.ts][donotnormalizeafdendpointsdeletesample]                                         | Deletes an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_Delete.json                                                                                                                                                                                                                                                       |
| [DoNotNormalizeAfdEndpointsGetSample.ts][donotnormalizeafdendpointsgetsample]                                               | Gets an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_Get.json                                                                                                                                                                                                                                                             |
| [DoNotNormalizeAfdEndpointsListByProfileSample.ts][donotnormalizeafdendpointslistbyprofilesample]                           | Lists existing AzureFrontDoor endpoints. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                  |
| [DoNotNormalizeAfdEndpointsListResourceUsageSample.ts][donotnormalizeafdendpointslistresourceusagesample]                   | Checks the quota and actual usage of endpoints under the given CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                                           |
| [DoNotNormalizeAfdEndpointsPurgeContentSample.ts][donotnormalizeafdendpointspurgecontentsample]                             | Removes a content from AzureFrontDoor. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                     |
| [DoNotNormalizeAfdEndpointsUpdateSample.ts][donotnormalizeafdendpointsupdatesample]                                         | Updates an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update domains, use the Update Custom Domain operation. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_Update.json                   |
| [DoNotNormalizeAfdEndpointsValidateCustomDomainSample.ts][donotnormalizeafdendpointsvalidatecustomdomainsample]             | Validates the custom domain mapping to ensure it maps to the correct CDN endpoint in DNS. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDEndpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                                          |
| [DoNotNormalizeAfdOriginGroupsCreateSample.ts][donotnormalizeafdorigingroupscreatesample]                                   | Creates a new origin group within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                      |
| [DoNotNormalizeAfdOriginGroupsDeleteSample.ts][donotnormalizeafdorigingroupsdeletesample]                                   | Deletes an existing origin group within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                            |
| [DoNotNormalizeAfdOriginGroupsGetSample.ts][donotnormalizeafdorigingroupsgetsample]                                         | Gets an existing origin group within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                  |
| [DoNotNormalizeAfdOriginGroupsListByProfileSample.ts][donotnormalizeafdorigingroupslistbyprofilesample]                     | Lists all of the existing origin groups within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_ListByProfile.json                                                                                                                                                                                                                                                                                                                              |
| [DoNotNormalizeAfdOriginGroupsListResourceUsageSample.ts][donotnormalizeafdorigingroupslistresourceusagesample]             | Checks the quota and actual usage of endpoints under the given CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_ListResourceUsage.json                                                                                                                                                                                                                                                                                                        |
| [DoNotNormalizeAfdOriginGroupsUpdateSample.ts][donotnormalizeafdorigingroupsupdatesample]                                   | Updates an existing origin group within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                            |
| [DoNotNormalizeAfdOriginsCreateSample.ts][donotnormalizeafdoriginscreatesample]                                             | Creates a new origin within the specified origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_Create.json                                                                                                                                                                                                                                                                                                                                            |
| [DoNotNormalizeAfdOriginsDeleteSample.ts][donotnormalizeafdoriginsdeletesample]                                             | Deletes an existing origin within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_Delete.json                                                                                                                                                                                                                                                                                                                                                 |
| [DoNotNormalizeAfdOriginsGetSample.ts][donotnormalizeafdoriginsgetsample]                                                   | Gets an existing origin within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_Get.json                                                                                                                                                                                                                                                                                                                                                       |
| [DoNotNormalizeAfdOriginsListByOriginGroupSample.ts][donotnormalizeafdoriginslistbyorigingroupsample]                       | Lists all of the existing origins within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_ListByOriginGroup.json                                                                                                                                                                                                                                                                                                                               |
| [DoNotNormalizeAfdOriginsUpdateSample.ts][donotnormalizeafdoriginsupdatesample]                                             | Updates an existing origin within an origin group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDOrigins_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [DoNotNormalizeAfdProfilesCheckHostNameAvailabilitySample.ts][donotnormalizeafdprofilescheckhostnameavailabilitysample]     | Validates the custom domain mapping to ensure it maps to the correct CDN endpoint in DNS. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDProfiles_CheckHostNameAvailability.json                                                                                                                                                                                                                                                                                      |
| [DoNotNormalizeAfdProfilesListResourceUsageSample.ts][donotnormalizeafdprofileslistresourceusagesample]                     | Checks the quota and actual usage of endpoints under the given CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/AFDProfiles_ListResourceUsage.json                                                                                                                                                                                                                                                                                                            |
| [checkEndpointNameAvailabilitySample.ts][checkendpointnameavailabilitysample]                                               | Check the availability of a resource name. This is needed for resources where name is globally unique, such as a afdx endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CheckEndpointNameAvailability.json                                                                                                                                                                                                                                                        |
| [checkNameAvailabilitySample.ts][checknameavailabilitysample]                                                               | Check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CheckNameAvailability.json                                                                                                                                                                                                                                                                 |
| [checkNameAvailabilityWithSubscriptionSample.ts][checknameavailabilitywithsubscriptionsample]                               | Check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CheckNameAvailabilityWithSubscription.json                                                                                                                                                                                                                                                 |
| [customDomainsCreateSample.ts][customdomainscreatesample]                                                                   | Creates a new custom domain within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsDeleteSample.ts][customdomainsdeletesample]                                                                   | Deletes an existing custom domain within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_Delete.json                                                                                                                                                                                                                                                                                                                                           |
| [customDomainsDisableCustomHttpsSample.ts][customdomainsdisablecustomhttpssample]                                           | Disable https delivery of the custom domain. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_DisableCustomHttps.json                                                                                                                                                                                                                                                                                                                                        |
| [customDomainsEnableCustomHttpsSample.ts][customdomainsenablecustomhttpssample]                                             | Enable https delivery of the custom domain. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_EnableCustomHttpsUsingCDNManagedCertificate.json                                                                                                                                                                                                                                                                                                                |
| [customDomainsGetSample.ts][customdomainsgetsample]                                                                         | Gets an existing custom domain within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_Get.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsListByEndpointSample.ts][customdomainslistbyendpointsample]                                                   | Lists all of the existing custom domains within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/CustomDomains_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                            |
| [edgeNodesListSample.ts][edgenodeslistsample]                                                                               | Edgenodes are the global Point of Presence (POP) locations used to deliver CDN content to end users. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/EdgeNodes_List.json                                                                                                                                                                                                                                                                                                  |
| [endpointsCreateSample.ts][endpointscreatesample]                                                                           | Creates a new CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Create.json                                                                                                                                                                                                                                                                           |
| [endpointsDeleteSample.ts][endpointsdeletesample]                                                                           | Deletes an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Delete.json                                                                                                                                                                                                                                                                     |
| [endpointsGetSample.ts][endpointsgetsample]                                                                                 | Gets an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Get.json                                                                                                                                                                                                                                                                           |
| [endpointsListByProfileSample.ts][endpointslistbyprofilesample]                                                             | Lists existing CDN endpoints. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                                |
| [endpointsListResourceUsageSample.ts][endpointslistresourceusagesample]                                                     | Checks the quota and usage of geo filters and custom domains under the given endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                                   |
| [endpointsLoadContentSample.ts][endpointsloadcontentsample]                                                                 | Pre-loads a content to CDN. Available for Verizon Profiles. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_LoadContent.json                                                                                                                                                                                                                                                                                                                                    |
| [endpointsPurgeContentSample.ts][endpointspurgecontentsample]                                                               | Removes a content from CDN. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                                   |
| [endpointsStartSample.ts][endpointsstartsample]                                                                             | Starts an existing CDN endpoint that is on a stopped state. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Start.json                                                                                                                                                                                                                                                                                                                                          |
| [endpointsStopSample.ts][endpointsstopsample]                                                                               | Stops an existing running CDN endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Stop.json                                                                                                                                                                                                                                                                                                                                                               |
| [endpointsUpdateSample.ts][endpointsupdatesample]                                                                           | Updates an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update custom domains, use the Update Custom Domain operation. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_Update.json                          |
| [endpointsValidateCustomDomainSample.ts][endpointsvalidatecustomdomainsample]                                               | Validates the custom domain mapping to ensure it maps to the correct CDN endpoint in DNS. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Endpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                                             |
| [logAnalyticsGetLogAnalyticsLocationsSample.ts][loganalyticsgetloganalyticslocationssample]                                 | Get all available location names for AFD log analytics report. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetLogAnalyticsLocations.json                                                                                                                                                                                                                                                                                                                 |
| [logAnalyticsGetLogAnalyticsMetricsSample.ts][loganalyticsgetloganalyticsmetricssample]                                     | Get log report for AFD profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                                                   |
| [logAnalyticsGetLogAnalyticsRankingsSample.ts][loganalyticsgetloganalyticsrankingssample]                                   | Get log analytics ranking report for AFD profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                |
| [logAnalyticsGetLogAnalyticsResourcesSample.ts][loganalyticsgetloganalyticsresourcessample]                                 | Get all endpoints and custom domains available for AFD log report x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetLogAnalyticsResources.json                                                                                                                                                                                                                                                                                                              |
| [logAnalyticsGetWafLogAnalyticsMetricsSample.ts][loganalyticsgetwafloganalyticsmetricssample]                               | Get Waf related log analytics report for AFD profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetWafLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                         |
| [logAnalyticsGetWafLogAnalyticsRankingsSample.ts][loganalyticsgetwafloganalyticsrankingssample]                             | Get WAF log analytics charts for AFD profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/LogAnalytics_GetWafLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                 |
| [managedRuleSetsListSample.ts][managedrulesetslistsample]                                                                   | Lists all available managed rule sets. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafListManagedRuleSets.json                                                                                                                                                                                                                                                                                                                                                        |
| [operationsListSample.ts][operationslistsample]                                                                             | Lists all of the available CDN REST API operations. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Operations_List.json                                                                                                                                                                                                                                                                                                                                                  |
| [originGroupsCreateSample.ts][origingroupscreatesample]                                                                     | Creates a new origin group within the specified endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                        |
| [originGroupsDeleteSample.ts][origingroupsdeletesample]                                                                     | Deletes an existing origin group within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                             |
| [originGroupsGetSample.ts][origingroupsgetsample]                                                                           | Gets an existing origin group within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                   |
| [originGroupsListByEndpointSample.ts][origingroupslistbyendpointsample]                                                     | Lists all of the existing origin groups within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                              |
| [originGroupsUpdateSample.ts][origingroupsupdatesample]                                                                     | Updates an existing origin group within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/OriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                             |
| [originsCreateSample.ts][originscreatesample]                                                                               | Creates a new origin within the specified endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_Create.json                                                                                                                                                                                                                                                                                                                                                   |
| [originsDeleteSample.ts][originsdeletesample]                                                                               | Deletes an existing origin within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_Delete.json                                                                                                                                                                                                                                                                                                                                                        |
| [originsGetSample.ts][originsgetsample]                                                                                     | Gets an existing origin within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_Get.json                                                                                                                                                                                                                                                                                                                                                              |
| [originsListByEndpointSample.ts][originslistbyendpointsample]                                                               | Lists all of the existing origins within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                         |
| [originsUpdateSample.ts][originsupdatesample]                                                                               | Updates an existing origin within an endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Origins_Update.json                                                                                                                                                                                                                                                                                                                                                        |
| [policiesCreateOrUpdateSample.ts][policiescreateorupdatesample]                                                             | Create or update policy with specified rule set name within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafPolicyCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                |
| [policiesDeleteSample.ts][policiesdeletesample]                                                                             | Deletes Policy x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafPolicyDelete.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [policiesGetSample.ts][policiesgetsample]                                                                                   | Retrieve protection policy with specified name within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafPolicyGet.json                                                                                                                                                                                                                                                                                                                                 |
| [policiesListSample.ts][policieslistsample]                                                                                 | Lists all of the protection policies within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafListPolicies.json                                                                                                                                                                                                                                                                                                                                        |
| [policiesUpdateSample.ts][policiesupdatesample]                                                                             | Update an existing CdnWebApplicationFirewallPolicy with the specified policy name under the specified subscription and resource group x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/WafPatchPolicy.json                                                                                                                                                                                                                                                                 |
| [profilesCreateSample.ts][profilescreatesample]                                                                             | Creates a new Azure Front Door Standard or Azure Front Door Premium or CDN profile with a profile name under the specified subscription and resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_Create.json                                                                                                                                                                                                                                          |
| [profilesDeleteSample.ts][profilesdeletesample]                                                                             | Deletes an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified parameters. Deleting a profile will result in the deletion of all of the sub-resources including endpoints, origins and custom domains. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_Delete.json                                                                                                                                                  |
| [profilesGenerateSsoUriSample.ts][profilesgeneratessourisample]                                                             | Generates a dynamic SSO URI used to sign in to the CDN supplemental portal. Supplemental portal is used to configure advanced feature capabilities that are not yet available in the Azure portal, such as core reports in a standard profile; rules engine, advanced HTTP reports, and real-time stats and alerts in a premium profile. The SSO URI changes approximately every 10 minutes. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_GenerateSsoUri.json |
| [profilesGetSample.ts][profilesgetsample]                                                                                   | Gets an Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_Get.json                                                                                                                                                                                                                                       |
| [profilesListByResourceGroupSample.ts][profileslistbyresourcegroupsample]                                                   | Lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within a resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_ListByResourceGroup.json                                                                                                                                                                                                                                                                         |
| [profilesListResourceUsageSample.ts][profileslistresourceusagesample]                                                       | Checks the quota and actual usage of endpoints under the given Azure Front Door Standard or Azure Front Door Premium or CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_ListResourceUsage.json                                                                                                                                                                                                                                                      |
| [profilesListSample.ts][profileslistsample]                                                                                 | Lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within an Azure subscription. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_List.json                                                                                                                                                                                                                                                                                   |
| [profilesListSupportedOptimizationTypesSample.ts][profileslistsupportedoptimizationtypessample]                             | Gets the supported optimization types for the current profile. A user can create an endpoint with an optimization type from the listed values. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_ListSupportedOptimizationTypes.json                                                                                                                                                                                                                               |
| [profilesUpdateSample.ts][profilesupdatesample]                                                                             | Updates an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Profiles_Update.json                                                                                                                                                                                                                        |
| [resourceUsageListSample.ts][resourceusagelistsample]                                                                       | Check the quota and actual usage of the CDN profiles under the given subscription. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/ResourceUsage_List.json                                                                                                                                                                                                                                                                                                                |
| [routesCreateSample.ts][routescreatesample]                                                                                 | Creates a new route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_Create.json                                                                                                                                                                                                                                                              |
| [routesDeleteSample.ts][routesdeletesample]                                                                                 | Deletes an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_Delete.json                                                                                                                                                                                                                                                        |
| [routesGetSample.ts][routesgetsample]                                                                                       | Gets an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_Get.json                                                                                                                                                                                                                                                              |
| [routesListByEndpointSample.ts][routeslistbyendpointsample]                                                                 | Lists all of the existing origins within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                            |
| [routesUpdateSample.ts][routesupdatesample]                                                                                 | Updates an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Routes_Update.json                                                                                                                                                                                                                                                        |
| [ruleSetsCreateSample.ts][rulesetscreatesample]                                                                             | Creates a new rule set within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [ruleSetsDeleteSample.ts][rulesetsdeletesample]                                                                             | Deletes an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_Delete.json                                                                                                                                                                                                                                                           |
| [ruleSetsGetSample.ts][rulesetsgetsample]                                                                                   | Gets an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_Get.json                                                                                                                                                                                                                                                                 |
| [ruleSetsListByProfileSample.ts][rulesetslistbyprofilesample]                                                               | Lists existing AzureFrontDoor rule sets within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                     |
| [ruleSetsListResourceUsageSample.ts][rulesetslistresourceusagesample]                                                       | Checks the quota and actual usage of endpoints under the given CDN profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/RuleSets_ListResourceUsage.json                                                                                                                                                                                                                                                                                                               |
| [rulesCreateSample.ts][rulescreatesample]                                                                                   | Creates a new delivery rule within the specified rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_Create.json                                                                                                                                                                                                                                                                                                                                              |
| [rulesDeleteSample.ts][rulesdeletesample]                                                                                   | Deletes an existing delivery rule within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_Delete.json                                                                                                                                                                                                                                                                                                                                                    |
| [rulesGetSample.ts][rulesgetsample]                                                                                         | Gets an existing delivery rule within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [rulesListByRuleSetSample.ts][ruleslistbyrulesetsample]                                                                     | Lists all of the existing delivery rules within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_ListByRuleSet.json                                                                                                                                                                                                                                                                                                                                      |
| [rulesUpdateSample.ts][rulesupdatesample]                                                                                   | Updates an existing delivery rule within a rule set. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Rules_Update.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsCreateSample.ts][secretscreatesample]                                                                               | Creates a new Secret within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Secrets_Create.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsDeleteSample.ts][secretsdeletesample]                                                                               | Deletes an existing Secret within profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Secrets_Delete.json                                                                                                                                                                                                                                                                                                                                                            |
| [secretsGetSample.ts][secretsgetsample]                                                                                     | Gets an existing Secret within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Secrets_Get.json                                                                                                                                                                                                                                                                                                                                                                |
| [secretsListByProfileSample.ts][secretslistbyprofilesample]                                                                 | Lists existing AzureFrontDoor secrets. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Secrets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                         |
| [securityPoliciesCreateSample.ts][securitypoliciescreatesample]                                                             | Creates a new security policy within the specified profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_Create.json                                                                                                                                                                                                                                                                                                                                  |
| [securityPoliciesDeleteSample.ts][securitypoliciesdeletesample]                                                             | Deletes an existing security policy within profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_Delete.json                                                                                                                                                                                                                                                                                                                                          |
| [securityPoliciesGetSample.ts][securitypoliciesgetsample]                                                                   | Gets an existing security policy within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [securityPoliciesListByProfileSample.ts][securitypolicieslistbyprofilesample]                                               | Lists security policies associated with the profile x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_ListByProfile.json                                                                                                                                                                                                                                                                                                                                   |
| [securityPoliciesPatchSample.ts][securitypoliciespatchsample]                                                               | Updates an existing security policy within a profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/SecurityPolicies_Patch.json                                                                                                                                                                                                                                                                                                                                         |
| [validateProbeSample.ts][validateprobesample]                                                                               | Check if the probe path is a valid path and the file can be accessed. Probe path is the path to a file hosted on the origin server to help accelerate the delivery of dynamic content via the CDN endpoint. This path is relative to the origin path specified in the endpoint configuration. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/ValidateProbe.json                                                                                                          |
| [validateSecretSample.ts][validatesecretsample]                                                                             | Validate a Secret in the profile. x-ms-original-file: specification/cdn/resource-manager/Microsoft.Cdn/stable/2021-06-01/examples/Validate_Secret.json                                                                                                                                                                                                                                                                                                                                                                    |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/DoNotNormalizeAfdCustomDomainsCreateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node dist/DoNotNormalizeAfdCustomDomainsCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[donotnormalizeafdcustomdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdCustomDomainsCreateSample.ts
[donotnormalizeafdcustomdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdCustomDomainsDeleteSample.ts
[donotnormalizeafdcustomdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdCustomDomainsGetSample.ts
[donotnormalizeafdcustomdomainslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdCustomDomainsListByProfileSample.ts
[donotnormalizeafdcustomdomainsrefreshvalidationtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdCustomDomainsRefreshValidationTokenSample.ts
[donotnormalizeafdcustomdomainsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdCustomDomainsUpdateSample.ts
[donotnormalizeafdendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdEndpointsCreateSample.ts
[donotnormalizeafdendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdEndpointsDeleteSample.ts
[donotnormalizeafdendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdEndpointsGetSample.ts
[donotnormalizeafdendpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdEndpointsListByProfileSample.ts
[donotnormalizeafdendpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdEndpointsListResourceUsageSample.ts
[donotnormalizeafdendpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdEndpointsPurgeContentSample.ts
[donotnormalizeafdendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdEndpointsUpdateSample.ts
[donotnormalizeafdendpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdEndpointsValidateCustomDomainSample.ts
[donotnormalizeafdorigingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginGroupsCreateSample.ts
[donotnormalizeafdorigingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginGroupsDeleteSample.ts
[donotnormalizeafdorigingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginGroupsGetSample.ts
[donotnormalizeafdorigingroupslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginGroupsListByProfileSample.ts
[donotnormalizeafdorigingroupslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginGroupsListResourceUsageSample.ts
[donotnormalizeafdorigingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginGroupsUpdateSample.ts
[donotnormalizeafdoriginscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginsCreateSample.ts
[donotnormalizeafdoriginsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginsDeleteSample.ts
[donotnormalizeafdoriginsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginsGetSample.ts
[donotnormalizeafdoriginslistbyorigingroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginsListByOriginGroupSample.ts
[donotnormalizeafdoriginsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdOriginsUpdateSample.ts
[donotnormalizeafdprofilescheckhostnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdProfilesCheckHostNameAvailabilitySample.ts
[donotnormalizeafdprofileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/DoNotNormalizeAfdProfilesListResourceUsageSample.ts
[checkendpointnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/checkEndpointNameAvailabilitySample.ts
[checknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/checkNameAvailabilitySample.ts
[checknameavailabilitywithsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/checkNameAvailabilityWithSubscriptionSample.ts
[customdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/customDomainsCreateSample.ts
[customdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/customDomainsDeleteSample.ts
[customdomainsdisablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/customDomainsDisableCustomHttpsSample.ts
[customdomainsenablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/customDomainsEnableCustomHttpsSample.ts
[customdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/customDomainsGetSample.ts
[customdomainslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/customDomainsListByEndpointSample.ts
[edgenodeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/edgeNodesListSample.ts
[endpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsCreateSample.ts
[endpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsDeleteSample.ts
[endpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsGetSample.ts
[endpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsListByProfileSample.ts
[endpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsListResourceUsageSample.ts
[endpointsloadcontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsLoadContentSample.ts
[endpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsPurgeContentSample.ts
[endpointsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsStartSample.ts
[endpointsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsStopSample.ts
[endpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsUpdateSample.ts
[endpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/endpointsValidateCustomDomainSample.ts
[loganalyticsgetloganalyticslocationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/logAnalyticsGetLogAnalyticsLocationsSample.ts
[loganalyticsgetloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/logAnalyticsGetLogAnalyticsMetricsSample.ts
[loganalyticsgetloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/logAnalyticsGetLogAnalyticsRankingsSample.ts
[loganalyticsgetloganalyticsresourcessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/logAnalyticsGetLogAnalyticsResourcesSample.ts
[loganalyticsgetwafloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/logAnalyticsGetWafLogAnalyticsMetricsSample.ts
[loganalyticsgetwafloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/logAnalyticsGetWafLogAnalyticsRankingsSample.ts
[managedrulesetslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/managedRuleSetsListSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/operationsListSample.ts
[origingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originGroupsCreateSample.ts
[origingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originGroupsDeleteSample.ts
[origingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originGroupsGetSample.ts
[origingroupslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originGroupsListByEndpointSample.ts
[origingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originGroupsUpdateSample.ts
[originscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originsCreateSample.ts
[originsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originsDeleteSample.ts
[originsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originsGetSample.ts
[originslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originsListByEndpointSample.ts
[originsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/originsUpdateSample.ts
[policiescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/policiesCreateOrUpdateSample.ts
[policiesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/policiesDeleteSample.ts
[policiesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/policiesGetSample.ts
[policieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/policiesListSample.ts
[policiesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/policiesUpdateSample.ts
[profilescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/profilesCreateSample.ts
[profilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/profilesDeleteSample.ts
[profilesgeneratessourisample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/profilesGenerateSsoUriSample.ts
[profilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/profilesGetSample.ts
[profileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/profilesListByResourceGroupSample.ts
[profileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/profilesListResourceUsageSample.ts
[profileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/profilesListSample.ts
[profileslistsupportedoptimizationtypessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/profilesListSupportedOptimizationTypesSample.ts
[profilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/profilesUpdateSample.ts
[resourceusagelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/resourceUsageListSample.ts
[routescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/routesCreateSample.ts
[routesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/routesDeleteSample.ts
[routesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/routesGetSample.ts
[routeslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/routesListByEndpointSample.ts
[routesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/routesUpdateSample.ts
[rulesetscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/ruleSetsCreateSample.ts
[rulesetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/ruleSetsDeleteSample.ts
[rulesetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/ruleSetsGetSample.ts
[rulesetslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/ruleSetsListByProfileSample.ts
[rulesetslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/ruleSetsListResourceUsageSample.ts
[rulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/rulesCreateSample.ts
[rulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/rulesDeleteSample.ts
[rulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/rulesGetSample.ts
[ruleslistbyrulesetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/rulesListByRuleSetSample.ts
[rulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/rulesUpdateSample.ts
[secretscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/secretsCreateSample.ts
[secretsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/secretsDeleteSample.ts
[secretsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/secretsGetSample.ts
[secretslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/secretsListByProfileSample.ts
[securitypoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/securityPoliciesCreateSample.ts
[securitypoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/securityPoliciesDeleteSample.ts
[securitypoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/securityPoliciesGetSample.ts
[securitypolicieslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/securityPoliciesListByProfileSample.ts
[securitypoliciespatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/securityPoliciesPatchSample.ts
[validateprobesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/validateProbeSample.ts
[validatesecretsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v7/typescript/src/validateSecretSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-cdn?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/cdn/arm-cdn/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
